1.19-5.1.5:
- Fixed a wrong teleportation warning with the matter receiver on 1.19.3 and higher
- Update to 1.19.4

1.19-5.1.4:
- Fixed a potential crash in the teleportation system in some rare cases

1.19-5.1.3:
- 1.19.3 compatibility fix in McJtyLib

1.19-5.1.2:
- Deleting a player from the matter receiver and transmitter player list will now also work based on selection
- Sciguyryan implemented a persistant tag on entities that are spawned by the RFTools spawner (boolean tag rftoolsutility:spawner)
- New feature for sensors. They can now also trigger on amount of items (as entities)
- The gui for the advanced porter now shows the most useful part of the receiver name by setting the cursor at the beginning

1.19-5.1.1:
- The charged ported gui works again in 1.19.3

1.19-5.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19-5.0.4:
- Removed the now obsolete elevator module

1.19-5.0.3:
- Greatly improved the input of the environmental controller. It was very hard to type negative numbers

1.19-5.0.2:
- Fixed the tank updating when the contents changed

1.19-5.0.1:
- The dialing device is infusable again
- Fixed the counter module to work again (fix partially done by joelra)

1.19-5.0.0:
- Port to 1.19

1.18-4.0.16:
- Fixed the blindness module recipe
- Added protection for division by zero in the spawner of the gui
- Small improvement on inputting min height for the environmental controller

1.18-4.0.15:
- Fixed missing recipe for the destination analyzer

1.18-4.0.14:
- Fixed larger screens not refreshing correctly when the chunk got unloaded

1.18-4.0.13:
- Implemented a way for the redstone transmitter and receiver to reset the channel (through the GUI)

1.18-4.0.12:
- Fixed the rendering of the environmental controller buffs
- The screen controller is now infusable again
- The crafter is now infusable again
- Fixed some mod interaction with screens

1.18-4.0.11:
- Port to 1.18.2

1.18-4.0.10: