@@ -121,7 +121,7 @@ public class CrafterBaseTE extends TickingTileEntity implements JEIRecipeAccepto
             }
             Recipe recipe = CraftingRecipe.findRecipe(level, workInventory);
             if (recipe != null) {
-                ItemStack result = BaseRecipe.assemble(recipe, workInventory, level.registryAccess());
+                ItemStack result = BaseRecipe.assemble(recipe, workInventory, level);
                 items.setStackInSlot(SLOT_CRAFTOUTPUT, result);
             } else {
                 items.setStackInSlot(SLOT_CRAFTOUTPUT, ItemStack.EMPTY);
@@ -375,7 +375,7 @@ public class CrafterBaseTE extends TickingTileEntity implements JEIRecipeAccepto
 
         ItemStack result = ItemStack.EMPTY;
         try {
-            result = BaseRecipe.assemble(recipe, workInventory, level.registryAccess());
+            result = BaseRecipe.assemble(recipe, workInventory, level);
         } catch (RuntimeException e) {
             // Ignore this error for now to make sure we don't crash on bad recipes.
             Logging.logError("Problem with recipe!", e);
